// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hook should only cause rerender on getter cache miss 1`] = `
<div>
  3
</div>
`;

exports[`Hook should only cause rerender on getter cache miss 2`] = `
<div>
  4
</div>
`;

exports[`Hook should return store value on component mount 1`] = `
<div>
  <div
    id="level"
  >
    12
  </div>
</div>
`;
